--- a/src/app/Components/Order/product-list/product-list.component.html
+++ b/src/app/Components/Order/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-<!-- <table class=" mt-2">
+<table class="table table-hover mt-2">
   <thead>
     <tr class="table-primary">
       <th>ID</th>
@@ -6,11 +6,83 @@
       <th>Image</th>
       <th>Av. Quantity</th>
       <th>Price</th>
+      <th>Count</th>
+      <th>Buy</th>
      </tr>
   </thead>
   <tbody>
-      <tr *ngFor="let product of prdList" [style.background-color]="product.quantity!=0?'red':'black'" >
-        <td>{{product?.id}}</td>
+      <!-- <tr *ngFor="let product of prdList; let i = index; let lst = last; trackBy: productsTrackByFun" class="table table-info">
+        <td>{{i+1}}</td>
+        <td>{{product?.name}}</td>
+        <td><img src="{{product?.imageURL}}" alt="Product Image"></td>
+        <td>{{product?.quantity}}</td>
+        <td>{{product?.price}}</td>
+        <td><input #itemsCount type="number" class="form-control"></td>
+        <td><button (click)="buying(product.price, itemsCount.value)">Buy</button></td>
+      </tr> -->
+      <!-- can't using two structural directives in one html element
+      <tr *ngFor="let product of prdList; let i = index;" *ngIf="product.quantity!=0" class="table table-info">
+        <td>{{i+1}}</td>
+        <td>{{product?.name}}</td>
+        <td><img src="{{product?.imageURL}}" alt="Product Image"></td>
+        <td>{{product?.quantity}}</td>
+        <td>{{product?.price}}</td>
+        <td><input #itemsCount type="number" class="form-control"></td>
+        <td><button (click)="buying(product.price, itemsCount.value)">Buy</button></td>
+      </tr> -->
+      <!-- <ng-container *ngFor="let product of prdList; let i = index;">
+        <tr *ngIf="product.quantity!=0" class="table table-info">
+          <td>{{i+1}}</td>
+          <td>{{product?.name}}</td>
+          <td><img src="{{product?.imageURL}}" alt="Product Image"></td>
+          <td>{{product?.quantity}}</td>
+          <td>{{product?.price}}</td>
+          <td><input #itemsCount type="number" class="form-control"></td>
+          <td><button (click)="buying(product.price, itemsCount.value)">Buy</button></td>
+        </tr>
+      </ng-container> -->
+      <!-- ngIf
+      <tr *ngFor="let product of prdList; let i = index;" class="table table-info">
+        <td>{{i+1}}</td>
+        <td>{{product?.name}}</td>
+        <td><img src="{{product?.imageURL}}" alt="Product Image"></td>
+        <td>
+          <div *ngIf="product.quantity!=0 else outOfStock">{{product?.quantity}}</div>
+          <ng-template #outOfStock>out of stock</ng-template>
+        </td>
+        <td>{{product?.price}}</td>
+        <td><input #itemsCount type="number" class="form-control"></td>
+        <td><button (click)="buying(product.price, itemsCount.value)">Buy</button></td>
+      </tr> -->
+      <!-- ngSwitch
+      <tr *ngFor="let product of prdList; let i = index;" class="table table-info">
+        <td>{{i+1}}</td>
+        <td>{{product?.name}}</td>
+        <td><img src="{{product?.imageURL}}" alt="Product Image"></td>
+        <td>
+          <ng-container [ngSwitch]="product.quantity">
+            <div *ngSwitchCase="0">out of stock</div>
+            <div *ngSwitchCase="1">last item</div>
+            <div *ngSwitchCase="2">last two items</div>
+            <div *ngSwitchDefault>{{product.quantity}}</div>
+          </ng-container>
+        </td>
+        <td>{{product?.price}}</td>
+        <td><input #itemsCount type="number" class="form-control"></td>
+        <td><button (click)="buying(product.price, itemsCount.value)">Buy</button></td>
+      </tr> -->
+      <!-- class binding
+      <tr *ngFor="let product of prdList; let i = index;" [class.table-info]="product.quantity!=0" [class.table-warning]="product.quantity==0"> -->
+      <!-- <tr *ngFor="let product of prdList; let i = index;" [class]="product.quantity!=0 ? setClassInfo: setClassWarning"> -->
+      <!-- <tr *ngFor="let product of prdList; let i = index;" [style.background-color]="product.quantity==0 ? 'red' : 'blue'"> -->
+      <!-- <tr *ngFor="let product of prdList; let i = index;" [style]="setInfoBackgroundColor"> -->
+      <!-- <tr *ngFor="let product of prdList; let i = index;" [style]="product.quantity!=0 ? setInfoBackgroundColor : setWarningBackgroundColor"> -->
+      <!-- ngClass
+      <tr *ngFor="let product of prdList; let i = index;" [ngClass]="{'table-info': product.quantity!=0, 'table-warning': product.quantity==0}"> -->
+      <!-- ngStyle
+      <tr *ngFor="let product of prdList; let i = index;" [ngStyle]="{'background-color': product.quantity!=0 ? 'blue' : 'red', 'color': product.price>300? 'blue' : 'yellow'}"> -->
+      <tr *ngFor="let product of prdList; let i = index;" [class]="product.quantity!=0 ? setClassInfo: setClassWarning">
+        <td>{{i+1}}</td>
         <td>{{product?.name}}</td>
         <td><img src="{{product?.imageURL}}" alt="Product Image"></td>
         <td>{{product?.quantity}}</td>
@@ -21,7 +93,7 @@
   </tbody>
 </table>
 
-<h3>{{orderTotalPrice}}</h3> -->
+<h3>The total price is: {{orderTotalPrice}}</h3>
 
 <!-- ----------------------------------------------------------------------------------- -->
 
