--- a/src/app/Components/Order/product-list/product-list.component.html
+++ b/src/app/Components/Order/product-list/product-list.component.html
@@ -12,77 +12,7 @@
      </tr>
   </thead>
   <tbody>
-      <!-- <tr *ngFor="let product of prdList; let i = index; let lst = last; trackBy: productsTrackByFun" class="table table-info">
-        <td>{{i+1}}</td>
-        <td>{{product?.name}}</td>
-        <td><img src="{{product?.imageURL}}" alt="Product Image"></td>
-        <td>{{product?.quantity}}</td>
-        <td>{{product?.price}}</td>
-        <td><input #itemsCount type="number" class="form-control"></td>
-        <td><button (click)="buying(product.price, itemsCount.value)">Buy</button></td>
-      </tr> -->
-      <!-- can't using two structural directives in one html element
-      <tr *ngFor="let product of prdList; let i = index;" *ngIf="product.quantity!=0" class="table table-info">
-        <td>{{i+1}}</td>
-        <td>{{product?.name}}</td>
-        <td><img src="{{product?.imageURL}}" alt="Product Image"></td>
-        <td>{{product?.quantity}}</td>
-        <td>{{product?.price}}</td>
-        <td><input #itemsCount type="number" class="form-control"></td>
-        <td><button (click)="buying(product.price, itemsCount.value)">Buy</button></td>
-      </tr> -->
-      <!-- <ng-container *ngFor="let product of prdList; let i = index;">
-        <tr *ngIf="product.quantity!=0" class="table table-info">
-          <td>{{i+1}}</td>
-          <td>{{product?.name}}</td>
-          <td><img src="{{product?.imageURL}}" alt="Product Image"></td>
-          <td>{{product?.quantity}}</td>
-          <td>{{product?.price}}</td>
-          <td><input #itemsCount type="number" class="form-control"></td>
-          <td><button (click)="buying(product.price, itemsCount.value)">Buy</button></td>
-        </tr>
-      </ng-container> -->
-      <!-- ngIf
-      <tr *ngFor="let product of prdList; let i = index;" class="table table-info">
-        <td>{{i+1}}</td>
-        <td>{{product?.name}}</td>
-        <td><img src="{{product?.imageURL}}" alt="Product Image"></td>
-        <td>
-          <div *ngIf="product.quantity!=0 else outOfStock">{{product?.quantity}}</div>
-          <ng-template #outOfStock>out of stock</ng-template>
-        </td>
-        <td>{{product?.price}}</td>
-        <td><input #itemsCount type="number" class="form-control"></td>
-        <td><button (click)="buying(product.price, itemsCount.value)">Buy</button></td>
-      </tr> -->
-      <!-- ngSwitch
-      <tr *ngFor="let product of prdList; let i = index;" class="table table-info">
-        <td>{{i+1}}</td>
-        <td>{{product?.name}}</td>
-        <td><img src="{{product?.imageURL}}" alt="Product Image"></td>
-        <td>
-          <ng-container [ngSwitch]="product.quantity">
-            <div *ngSwitchCase="0">out of stock</div>
-            <div *ngSwitchCase="1">last item</div>
-            <div *ngSwitchCase="2">last two items</div>
-            <div *ngSwitchDefault>{{product.quantity}}</div>
-          </ng-container>
-        </td>
-        <td>{{product?.price}}</td>
-        <td><input #itemsCount type="number" class="form-control"></td>
-        <td><button (click)="buying(product.price, itemsCount.value)">Buy</button></td>
-      </tr> -->
-      <!-- class binding
-      <tr *ngFor="let product of prdList; let i = index;" [class.table-info]="product.quantity!=0" [class.table-warning]="product.quantity==0"> -->
-      <!-- <tr *ngFor="let product of prdList; let i = index;" [class]="product.quantity!=0 ? setClassInfo: setClassWarning"> -->
-      <!-- <tr *ngFor="let product of prdList; let i = index;" [style.background-color]="product.quantity==0 ? 'red' : 'blue'"> -->
-      <!-- <tr *ngFor="let product of prdList; let i = index;" [style]="setInfoBackgroundColor"> -->
-      <!-- <tr *ngFor="let product of prdList; let i = index;" [style]="product.quantity!=0 ? setInfoBackgroundColor : setWarningBackgroundColor"> -->
-      <!-- ngClass
-      <tr *ngFor="let product of prdList; let i = index;" [ngClass]="{'table-info': product.quantity!=0, 'table-warning': product.quantity==0}"> -->
-      <!-- ngStyle
-      <tr *ngFor="let product of prdList; let i = index;" [ngStyle]="{'background-color': product.quantity!=0 ? 'blue' : 'red', 'color': product.price>300? 'blue' : 'yellow'}"> -->
-      <tr *ngFor="let product of prdList; let i = index;" [class]="product.quantity!=0 ? setClassInfo: setClassWarning">
+      <tr *ngFor="let product of productListFilteration; let i = index;" [class]="product.quantity!=0 ? setClassInfo: setClassWarning">
         <td>{{i+1}}</td>
         <td>{{product?.name}}</td>
         <td><img LightBox mouseOverColor="green" mouseOutColor="yellow" defaultColor="black" [src]="product?.imageURL" alt="Product Image"></td>
@@ -94,62 +24,5 @@
       </tr>
   </tbody>
 </table>
-
 <h3>The total price is: {{orderTotalPrice | currency: 'EUR': 'code'}}</h3>
 <h6>Today's Date: {{orderDate | date: 'longDate'}}</h6>
-
-<!-- ----------------------------------------------------------------------------------- -->
-
-<!-- <label class="form-label">Category</label>
-<select class="form-control" name="Categories" ت ت>
-  <option *ngFor="let cat of catList" value="{{cat.id}}">{{cat.name}}</option>
-</select>
-<div>
-  Category Id: {{selectedCategoryId}}
-  <br>
-  <button class="btn btn-primary" (click)="changeCategory()">Change Category</button>
-</div> -->
-
-<!-- <div class="mb-3">
-  <label class="form-label">Category</label>
-  <select class="form-control" name="Categories" [(ngModel)]="selectedCategoryId">
-    <option *ngFor="let cat of catList" value="{{cat.id}}">{{cat.name}}</option>
-  </select>
-</div>
-<div>
-  Category Id: {{selectedCategoryId}}
-  <br>
-  <button type="button" class="btn btn-primary" (click)="changeCategory()">Change Category</button>
-</div>
-<hr>
-<table class="table table-hover mt-2">
-  <thead>
-    <tr class="table-primary">
-      <th>ID</th>
-      <th>Name</th>
-      <th>Image</th>
-      <th>Av. Quantity</th>
-      <th>Price</th>
-      <th>Count</th>
-      <th>Buy</th>
-     </tr>
-  </thead>
-  <tbody> -->
-    <!-- <tr *ngFor="let prd of prdList; let i = index; trackBy:profuctTrackByFun;" class="table-info" [class.table-warning]="prd.quantity==0" [class.d-none]="prd.categoryID!=selectedCategoryId" [style.background-color]="(prd.quantity == 0) ? 'red' : 'black' "> -->
-    <!-- <ng-container *ngFor="let prd of prdList; let i = index;">
-      <tr *ngIf="prd.quantity!=0" class="table-info" >
-        <td>{{i+1}}</td>
-        <td>{{prd?.name}}</td>
-        <td><img src="{{prd?.imageURL}}" alt=""></td>
-        <td>{{prd?.quantity}}</td>
-        <td>{{prd?.price}}</td>
-        <td><input #itemsCount type="number" class="form-control"></td>
-        <td><button type="button" class="btn btn-primary" (click)="buy(prd.price, itemsCount.value)">Buy</button></td>
-      </tr>
-    </ng-container>
-  </tbody>
-</table>
-
-<hr>
-
-<h3>Order Total Price: {{orderTotalPrice}}</h3> -->
