--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,8 @@
-<!-- <h1 class="text-danger">Hello World {{title}}</h1> -->
 <app-header></app-header>
 <div class="container-fluid">
   <section class="row">
     <app-sidebar class="col-2"></app-sidebar>
-    <!-- <app-home class="col-10"></app-home> -->
-    <app-product-list class="col-10"></app-product-list>
+    <app-order-master class="col-10"></app-order-master>
   </section>
 </div>
 <app-footer></app-footer>
